--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -4,7 +4,7 @@
 :root {
   --font-body: "Source Sans Pro";
   --font-text: "Cascadia Code";
-  --font-header: "Inter";
+  --font-header: "Cascadia Code";
   --font-mono: "Fira Code";
 }
 
@@ -36,23 +36,26 @@ body {
   background-color: var(--light);
 }
 
+h1 { --header-color: var(--h1-clr) }
+h2 { --header-color: var(--h2-clr) }
+h3 { --header-color: var(--h3-clr) }
+h4 { --header-color: var(--h4-clr) }
+h5 { --header-color: var(--h5-clr) }
+h6 { --header-color: var(--h6-clr) }
+
 h1, h2, h3, h4, h5, h6, thead {
   font-family: var(--font-header);
-  color: var(--dark);
+  color: var(--header-color);
   font-weight: revert;
-  margin: 2rem 0 0;
-  padding: 2rem auto 1rem;
+  margin: 1rem 0 0;
+  padding: .6rem .2rem;
 
   &:hover > .hanchor {
     color: var(--secondary);
   }
 }
 
-h1 { color: var(--h1-clr) }
-h2 { color: var(--h2-clr) }
-h3 { color: var(--h3-clr) }
-h4 { color: var(--h4-clr) }
-h5 { color: var(--h5-clr) }
+
 
 i, em { color: var(--i) }
 b, strong { color: var(--b) }
@@ -136,7 +139,7 @@ td, th {
 
 img {
   max-width: 100%;
-  border-radius: 3px;
+  border-radius: 8px;
   margin: 1em 0;
 }
 
@@ -282,6 +285,7 @@ sup > a {
 
 #page-title {
   margin: 0;
+  background-color: unset;
   & > a {
     font-family: var(--font-header);
   }
