--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -66,4 +66,26 @@ DARK - obsidian
   --h4-clr: #85EF7E !important;
   --h5-clr: #EEDC73 !important;
 }
+
+RED
+{
+  --light: #2B2E4A;
+  --dark: #fbfffe;
+  --secondary: #E84545;
+  --visited: #903749;
+  --tertiary: #903749;
+  --primary: #f58382;
+  --gray: #f7f5f5;
+  --lightgray: #53354A;
+  --outlinegray: #34424b;
+  --i: #FF638F;
+  --b: #FF6666;
+  --code: #ffc3c3;
+  --h1-clr: #E84646;
+  --h2-clr: #FF684A;
+  --h3-clr: #F58147;
+  --h4-clr: #FFA657;
+  --h5-clr: #FFC780;
+}
+
 */
