--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,7 +10,7 @@
     <!-- Begin actual content -->
     {{partial "header.html" .}}
 
-    <article>
+    <article class="notes">
       {{if .Title}}<h1>{{ .Title }}</h1>{{end}}
 
       <p class="meta">
