--- a/layouts/partials/page-list.html
+++ b/layouts/partials/page-list.html
@@ -1,5 +1,5 @@
 <ul class="section-ul">
-    {{- range . -}}
+    {{ range . }}
     <li class="section-li">
         <div class="section">
             <p class="meta">
@@ -16,5 +16,5 @@
             </ul>
         </div>
     </li>
-    {{- end -}}
+    {{ end }}
 </ul>
