--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -56,7 +56,6 @@ h1, h2, h3, h4, h5, h6, thead {
 }
 
 
-
 i, em { color: var(--i) }
 b, strong { color: var(--b) }
 
@@ -137,10 +136,20 @@ td, th {
   border: 1px solid var(--outlinegray);
 }
 
+figure {
+  margin: 1em 0;
+}
+
+figcaption {
+  padding: 0 15px;
+  color: var(--gray);
+  opacity: 0.9;
+  font-size: 0.8em;  
+}
+
 img {
   max-width: 100%;
   border-radius: 8px;
-  margin: 1em 0;
 }
 
 p > img + em {
@@ -191,16 +200,15 @@ blockquote {
 
 .sidebar-nav {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   justify-content: left;
-  margin: 30px 0px;
-  
+  margin: 20px 0px;
   
   & > a {
     padding: 10px;
     background-color: var(--lightgray);
     border-radius: 8px;
-    margin: 0px 10px;
+    margin: 6px 9px;
   }
 }
 
@@ -213,6 +221,17 @@ article {
   & > h1 {
     margin-top: 2em;
     font-size: 2em;
+  }
+  
+  &.notes {
+    & h2, h3, h4, h5, h6 {
+      color: var(--dark);
+      background-color: var(--header-color);
+      border-radius: 12px;
+      padding: 13px;
+      margin-top: 1.5em;
+      display: table;
+    }
   }
   
   & > .meta {
@@ -393,17 +412,18 @@ hr {
 header {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
+  justify-content: space-between;
   margin: 1em 0 1.5em;
 
   & > h1 {
     font-size: 2em;
   }
-
-  & > nav {
-    @media all and (max-width: 600px) {
-      display: none;
-    }
+  
+  & .header-right {
+    display: flex;
+    flex-wrap: nowrap;
   }
 
   #search-icon {
@@ -537,7 +557,7 @@ header {
 }
 
 .section-li {
-  margin-bottom: 0.3em;
+  line-height: 1.4em !important;
 
   & > .section {
     display: flex;
@@ -553,11 +573,6 @@ header {
       font-weight: 700;
       margin: 0;
     }
-    
-    & p {
-      margin: 0;
-      padding-right: 1.5em;
-    }
   }
 
   & h3 {
@@ -567,6 +582,9 @@ header {
   }
 
   & .meta {
+    padding-right: 10px;
+    width: 90px;
+    font-size: 12px;
     opacity: 0.6;
   }
 }
