--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -1,9 +1,16 @@
 {{$src := .Destination | safeURL }}
 {{$width := index (split .Text "|") 1 | default "auto" }}
+{{$text := replace .Text (print "|" $width) "" 1}}
 {{$external := strings.HasPrefix $src "http" }}
 {{- if $external -}}
-<img src="{{ $src }}" width="{{ $width }}" alt="{{ .Text }}" {{ with .Title }} title="{{ . }}" {{ end }} />
+<figure>
+    <img src="{{ $src }}" width="{{ $width }}" alt="{{ $text }}" {{ with .Title }} title="{{ . }}" {{ end }} />
+    <figcaption>{{ $text }}</figcaption>
+</figure>
 {{- else -}}
 {{$fixedUrl := (cond (hasPrefix $src "/") $src (print "/" $src)) | urlize}}
-<img src="{{.Page.Site.BaseURL}}{{ $fixedUrl }}" width="{{ $width }}" alt="{{ .Text }}" {{ with .Title }} title="{{ . }}" {{ end }} />
+<figure>
+    <img src="{{.Page.Site.BaseURL}}{{ $fixedUrl }}" width="{{ $width }}" alt="{{ $text }}" {{ with .Title }} title="{{ . }}" {{ end }} />
+    <figcaption>{{ $text }}</figcaption>
+</figure>
 {{- end -}}
