--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -217,6 +217,7 @@ article {
   color: var(--dark);
   line-height: 1.5em;
   font-family: var(--font-text);
+  font-size: 0.9em; /* todo */
   
   & > h1 {
     margin: 2em 0 .3em 0;
