--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -230,17 +230,27 @@ article {
     display: table;
   }
   
-  &.notes a {
+  &.notes .markdown-header {
     & > h2, > h3, > h4, > h5, > h6 {
       color: var(--header-color);
-      background-color: var(--lightgray);
-      border-radius: 12px;
-      padding: 13px;
+      padding: 15px;
       margin-top: 1.5em;
+      margin-bottom: 1em;
+      border-bottom: 3px solid;
+    }
+
+    & > h3, > h4, > h5, > h6 {
       display: table;
     }
   }
   
+  /* For --see also-- and --main article-- */
+  .markdown-header ~ p{
+    & > a.internal-link:first-child {
+      margin: 2px 3em;
+    }
+  }
+
   & > .meta {
     margin: 0 0 1em 0;
     opacity: 0.7;
