--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,13 +1,13 @@
 <head>
   <!-- Meta tags -->
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta
     name="description"
     content="{{if .IsHome}}{{$.Site.Data.config.description}}{{else}}{{.Summary}}{{end}}"
   />
   <title>
-    {{ if .Title }}{{ .Title }}{{ else }}{{ $.Site.Data.config.page_title }}{{
-    end }}
+    {{ $title := replace .Title "$" "" }}
+    {{ if .Title }}{{ $title }}{{ else }}{{ $.Site.Data.config.page_title }}{{ end }}
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -15,24 +15,25 @@
   {{ $favicon := $.Site.Data.config.favicon | default (slice (dict "rel" "shortcut icon" "type" "image/png" "href" "icon.png")) }}
   {{ $type := (printf "%T" $favicon) }}
   {{ if eq $type "string" }}
-  {{ $favicon | safeHTML }}
+    {{ $favicon | safeHTML }}
   {{ else }}
-  {{ range $favicon }}
-  <link rel="{{.rel}}" {{if .type}}type="{{.type}}"{{end}} {{if .sizes}}sizes="{{.sizes}}"{{end}} href="{{$.Site.BaseURL}}/{{.href}}" />
-  {{- end }}
+    {{ range $favicon }}
+    <link rel="{{.rel}}" {{if .type}}type="{{.type}}"{{end}} {{if .sizes}}sizes="{{.sizes}}"{{end}} href="{{$.Site.BaseURL}}/{{.href}}" />
+    {{- end }}
   {{ end }}
 
   <!-- CSS Stylesheets and Fonts -->
   {{$sass := resources.Match "styles/[!_]*.scss" }}
   {{$css := slice }}
   {{range $sass}}
-  {{$scss := . | resources.ToCSS (dict "outputStyle" "compressed") }}
-  {{$css = $css | append $scss}}
+    {{$scss := . | resources.ToCSS (dict "outputStyle" "compressed") }}
+    {{$css = $css | append $scss}}
   {{end}}
   {{if $.Site.Data.config.enableCallouts}}
     {{$scss := resources.Get "styles/_callouts.scss" | resources.ToCSS (dict "outputStyle" "compressed") }}
     {{$css = $css | append $scss}}
   {{end}}
+  {{print $sass}}
   {{$finalCss := $css | resources.Concat "styles.css" | resources.Fingerprint "md5" | resources.Minify  }}
   <link href="{{$finalCss.Permalink}}" rel="stylesheet" />
 
@@ -42,32 +43,31 @@
    <!-- Base scripts -->
   {{$scripts := (slice "js/darkmode.js" "js/util.js")}}
   {{range $scripts}}
-  {{$scriptname := .}}
-  {{ $s := resources.Get $scriptname | resources.ExecuteAsTemplate $scriptname . | resources.Fingerprint "md5" | resources.Minify }}
-  <script src="{{$s.Permalink}}"></script>
+    {{$scriptname := .}}
+    {{ $s := resources.Get $scriptname | resources.ExecuteAsTemplate $scriptname . | resources.Fingerprint "md5" | resources.Minify }}
+    <script src="{{$s.Permalink}}"></script>
   {{end}}
   {{partial "katex.html" .}}
     
   <script src="https://unpkg.com/@floating-ui/core@0.7.3"></script>
   <script src="https://unpkg.com/@floating-ui/dom@0.5.4"></script>
-  {{ $popover := resources.Get "js/popover.js" | resources.Fingerprint "md5" |
-  resources.Minify }}
+  {{ $popover := resources.Get "js/popover.js" | resources.Fingerprint "md5" | resources.Minify }}
   <script src="{{$popover.Permalink}}"></script>
 
   <!-- Optional scripts -->
   {{ if $.Site.Data.config.enableCodeBlockTitle }}
-  {{ $codeTitle := resources.Get "js/code-title.js" | resources.Fingerprint "md5" | resources.Minify }}
-  <script src="{{$codeTitle.Permalink}}"></script>
+    {{ $codeTitle := resources.Get "js/code-title.js" | resources.Fingerprint "md5" | resources.Minify }}
+    <script src="{{$codeTitle.Permalink}}"></script>
   {{end}}
 
   {{ if $.Site.Data.config.enableCodeBlockCopy }}
-  {{ $clipboard := resources.Get "js/clipboard.js" | resources.Fingerprint "md5" | resources.Minify }}
-  <script src="{{$clipboard.Permalink}}"></script>
+    {{ $clipboard := resources.Get "js/clipboard.js" | resources.Fingerprint "md5" | resources.Minify }}
+    <script src="{{$clipboard.Permalink}}"></script>
   {{ end }}
 
   {{ if $.Site.Data.config.enableCallouts }}
-  {{ $callouts := resources.Get "js/callouts.js" | resources.Fingerprint "md5" | resources.Minify }}
-  <script src="{{$callouts.Permalink}}"></script>
+    {{ $callouts := resources.Get "js/callouts.js" | resources.Fingerprint "md5" | resources.Minify }}
+    <script src="{{$callouts.Permalink}}"></script>
   {{ end }}
 
   <!--  Preload page vars  -->
