--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -231,16 +231,23 @@ article {
   }
   
   &.notes .markdown-header {
-    & > h2, > h3, > h4, > h5, > h6 {
+    & > h2, > h3, > h4, > h5 {
       color: var(--header-color);
       padding: 15px;
       margin-top: 1.5em;
       margin-bottom: 1em;
-      border-bottom: 3px solid;
+      border-bottom: 4px solid;
     }
 
     & > h3, > h4, > h5, > h6 {
+      padding: 12px;
+      border-bottom: 3px solid;
       display: table;
+    }
+    
+    & > h4, > h5, > h6 {
+      border-bottom: 2px dashed;
+      padding: 10px;
     }
   }
   
@@ -248,6 +255,9 @@ article {
   .markdown-header ~ p{
     & > a.internal-link:first-child {
       margin: 2px 3em;
+      border-left: 4px solid var(--dark);
+      border-radius: 0;
+      padding: 4px 16px;
     }
   }
 
