--- a/layouts/partials/date-fmt.html
+++ b/layouts/partials/date-fmt.html
@@ -1,1 +1,2 @@
+{{/* $contentIndex := resources.Get "indices/contentIndex.json" | resources.Fingerprint "md5" | resources.Minify */}}
 {{.Lastmod.Format "02 Jan 06"}}
