--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -15,10 +15,10 @@
         <div class="tags">
             {{ range .Site.Taxonomies.tags.ByCount }}
             <div class="meta">
-                <h1><a href="{{ .Page.Permalink }}">{{ .Page.Title | humanize }}</a></h1>
+                <h1><a href="{{ .Page.Permalink }}">{{ partial "title.html" .Page | humanize }}</a></h1>
                 <p><b>{{ .Count }}</b> {{ i18n "notes_count" }} {{if gt .Count 10}}({{ i18n "first_10"}}){{end}}</p>
             </div>
-            {{ with ($.Site.GetPage (printf "/tags/%s" .Page.Title)) }}
+            {{ with ($.Site.GetPage (printf "/tags/%s" (partial "title.html" .Page))) }}
             {{partial "page-list.html" (first 10 .Pages.ByLastmod.Reverse)}}
             {{ end }}
             {{ end }}
