--- a/layouts/partials/page-list.html
+++ b/layouts/partials/page-list.html
@@ -1,27 +1,22 @@
 <ul class="section-ul">
     {{ range . }}
-    <li class="section-li">
-        <div class="section">
-            <p class="meta">
-                {{partial "date-fmt.html" .}}
-            </p>
-            <div class="desc">
-                <h3>
-                    {{ if .Title }}
-                        <a href="{{ .Permalink }}" class="internal-link" data-src="{{ .RelPermalink }}">{{- .Title -}}</a>
-                    {{ else }}    
-                        <!-- Missing title -->
-                        <a href="{{ .Permalink }}" class="internal-link" data-src="{{ .RelPermalink }}">{{ .File.BaseFileName | title }}</a>
+        <li class="section-li">
+            <div class="section">
+                <p class="meta">
+                    {{partial "date-fmt.html" .}}
+                </p>
+                <div class="desc">
+                    <h3>
+                        <a href="{{ .Permalink }}" class="internal-link" data-src="{{ .RelPermalink }}">{{- partial "title.html" . -}}</a>
+                    </h3>
+                </div>
+                <div class="spacer"></div>
+                <ul class="tags">
+                    {{ range (.GetTerms "tags") }}
+                        <li><a href="{{ .Permalink }}">{{ .LinkTitle | title }}</a></li>
                     {{ end }}
-                </h3>
+                </ul>
             </div>
-            <div class="spacer"></div>
-            <ul class="tags">
-                {{ range (.GetTerms "tags") }}
-                <li><a href="{{ .Permalink }}">{{ .LinkTitle | title }}</a></li>
-                {{ end }}
-            </ul>
-        </div>
-    </li>
+        </li>
     {{ end }}
 </ul>
