--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -8,7 +8,7 @@
     <!-- Begin actual content -->
     {{partial "header.html" .}}
     <article>
-        <h1>{{- partial "title.html" . -}} directory</h1>
+        <h1>{{ partial "title.html" . }} directory</h1>
         {{ with .Params.description }}
             <p>{{.}}</p>
         {{ end }}
