--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,15 +1,11 @@
 
-
 <hr/>
 
 {{if $.Site.Data.config.enableFooter}}
+{{partial "related.html" .}}
 <div class="page-end" id="footer">
-    <div class="backlinks-container">
-        {{partial "backlinks.html" .}}
-    </div>
-    <div>
-        {{partial "graph.html" .}}
-    </div>
+    <div class="backlinks-container"> {{partial "backlinks.html" .}} </div>
+    <div> {{partial "graph.html" .}} </div>
 </div>
 {{end}}
 
