--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,7 +4,7 @@
 
 <body>
 {{partial "search.html" .}}
-
+{{partial "navButtons.html" .}}
 
 <div class="singlePage">
     <!-- Begin actual content -->
