--- a/layouts/partials/navButtons.html
+++ b/layouts/partials/navButtons.html
@@ -1,5 +1,9 @@
-<button type="button" id="navButtonTop" class="hideButton" title="Go to top" onclick="document.getElementById('header').scrollIntoView()">&uarr;</button>
-<button type="button" id="navButtonBottom" class="showButton" title="Go to bottom" onclick="document.getElementById('footer').scrollIntoView()">&darr;</button>
+<button type="button" id="navButtonTop" class="hideButton" title="Go to top" onclick="document.getElementById('header').scrollIntoView()">
+    <i class="fa-solid fa-angle-up"></i>
+</button>
+<button type="button" id="navButtonBottom" class="hideButton" title="Go to bottom" onclick="document.getElementById('footer').scrollIntoView()">
+    <i class="fa-solid fa-angle-down"></i>
+</button>
 
 <script defer>
     const bt = document.getElementById("navButtonTop");
@@ -12,12 +16,14 @@
         var top = window.scrollY;
         var bottom = height - window.innerHeight - top;
 
-        if (top >= 140) { bt.className = "showButton" } 
+        if (top >= 150) { bt.className = "showButton" } 
         else { bt.className = "hideButton" }
 
-        if (bottom >= 140) { bb.className = "showButton" } 
+        if (bottom >= 200) { bb.className = "showButton" } 
         else { bb.className = "hideButton" }
     };
 
+    // todo fix this onload
+    window.addEventListener('DOMContentLoaded', scrollDelegate);
     window.addEventListener("scroll", scrollDelegate);
 </script>
