--- a/layouts/partials/navButtons.html
+++ b/layouts/partials/navButtons.html
@@ -5,7 +5,7 @@
     <i class="fa-solid fa-angle-down"></i>
 </button>
 
-<script defer>
+<script>
     const bt = document.getElementById("navButtonTop");
     const bb = document.getElementById("navButtonBottom");
     const body = document.body, html = document.documentElement;
