--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -148,24 +148,26 @@
 		const init = (doc = document) => {
 			// NOTE: everything within this callback will be executed for initial page navigation. This is a good place to put JavaScript that only replaces DOM nodes.
 			{{if $data.enableCodeBlockCopy | default $.Site.Data.config.enableCodeBlockCopy -}}
-			addCopyButtons();
+				addCopyButtons();
 			{{ end }}
 
 			{{if $data.enableCodeBlockTitle | default $.Site.Data.config.enableCodeBlockTitle -}}
-			addTitleToCodeBlocks();
+				addTitleToCodeBlocks();
 			{{- end -}}
+
+			
 			{{if $data.enableLatex | default $.Site.Data.config.enableLatex}}
-			renderMathInElement(doc.body, {
-				delimiters: [
-					{left: '$$', right: '$$', display: true},
-					{left: '$', right: '$', display: false},
-				],
-				macros: {
-					'’': "'"
-				},
-				throwOnError : false
-			});
-			{{end}}
+				renderMathInElement(doc.body, {
+					delimiters: [
+						{ left: "$$", right: "$$", display: true },
+						{ left: "$", right: "$", display: false },
+					],
+					throwOnError : false,
+					macros: {
+						'’': "'"
+					},
+				});
+			{{end}}  
 		};
 	</script>
 	{{if $data.enableSPA | default $.Site.Data.config.enableSPA}}
