--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -13,7 +13,9 @@
 
   --i: #95E87E;
   --b: #90F2E9;
+
   --code: #E18C72;
+  --code-bg: #313b49;
 
   --h1-clr: #79d2e9;
   --h2-clr: #8acbe9;
@@ -68,7 +70,9 @@
 
   --i: #91F580 !important;
   --b: #FF7E7E !important;
-  --code: #e18dad;
+
+  --code: #E18C72 !important;
+  --code-bg: #313b49 !important;
 
   --h1-clr: #75A8FF !important;
   --h2-clr: #65C5F3 !important;
