--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -7,6 +7,8 @@
 	--font-text: "Cascadia Code";
 	--font-header: "Cascadia Code";
 	--font-mono: "Fira Code";
+
+    box-sizing: border-box;
 }
 
 // typography
@@ -414,11 +416,10 @@ pre {
 
 code {
 	font-family: var(--font-mono);
-	font-size: 0.85em;
-	padding: 0.15em 0.3em;
+	padding: 0.10em 0.25em;
 	border-radius: 5px;
 	color: var(--code);
-	background: var(--lightgray);
+	background: var(--code-bg);
 }
 
 @keyframes fadeIn {
